add proper branch name to the build condition

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,6 +2,7 @@ name: Build DevBuild
 on:
     push:
         branches:
+            - master
             - main
         paths:
             - .github/workflows/build.yml
